--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -136,6 +136,80 @@
 		padding-inline-start: 0;
 	}
 
+	.price-variants .lms-ui-box {
+		display: flex;
+		border: 1px dotted black;
+		border-radius: 5px;
+		background-color: #DFD5BD;
+		flex-direction: column;
+		justify-content: flex-start;
+	}
+
+	.price-variants .lms-ui-box-header {
+		padding-top: 0.7em;
+		padding-bottom: 0.3em;
+		border-bottom: 1px dotted black;
+		border-top-left-radius: 4px;
+		border-top-right-radius: 4px;
+		background-color: #CEBD9B;
+
+		display: flex;
+		flex-grow: 1;
+		flex-wrap: wrap;
+	}
+
+	.price-variants .lms-ui-box-body {
+		display: flex;
+		flex-grow: 1;
+		flex-wrap: wrap;
+		flex-direction: column;
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 4px;
+	}
+
+	.price-variants .lms-ui-box-row {
+		display: flex;
+		flex-grow: 1;
+		padding-left: 0.5em;
+		justify-content: stretch;
+
+	}
+
+	.price-variants .lms-ui-box-field {
+		width: 100%;
+		min-width: 10em;
+	}
+
+	.price-variants .lms-ui-box-body .lms-ui-box-row {
+		padding-top: 0.3em;
+		padding-bottom: 0.3em;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:not(:last-child) {
+		border-bottom: 1px dotted grey;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:last-child {
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 4px;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:nth-child(even) {
+		background-color: #EBE4D6;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:nth-child(even).highlight:hover {
+		background-color: #CFC;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:nth-child(odd) {
+		background-color: #DFD5BD;
+	}
+
+	.price-variants .lms-ui-background-cycle.lms-ui-box-body .lms-ui-box-row:nth-child(odd).highlight:hover {
+		background-color: #CFC;
+	}
+
 </style>
 
 {$default_taxrate = ConfigHelper::getConfig('phpui.default_taxrate')}
@@ -291,9 +365,9 @@
 																				{if !$item.single.optional} disabled data-mandatory="1"{/if}
 																				data-tariffaccess="{$item.single.authtype}">
 																				{if $promotion_show_period_values}
-																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency) c=implode(' / ', $item.single.periodvalues)}$a (default: $b; $c){/t}
+																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency, 3) c=implode(' / ', $item.single.periodvalues)}$a (default: $b; $c){/t}
 																				{else}
-																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency)}$a (default: $b){/t}
+																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency, 3)}$a (default: $b){/t}
 																				{/if}
 																			</label>
 																			<span class="schema-tariff-count">
@@ -318,15 +392,15 @@
 																					<td>
 																						{if $period.modifiable}
 																							{textformat assign="elemid"}value-{$schemaid}-{iconv('UTF-8', 'ASCII//TRANSLIT', preg_replace('/[ _]/', '-', $label))}-{$item.single.assignmentid}-{$key}{/textformat}
-																							<input id="{$elemid}" type="text" name="{$variable_prefix}[values][{$schemaid}][{$label}][{$item.single.assignmentid}][{$key}]"
-																									value="{if isset($variables.values[$schemaid][$label][$item.single.assignmentid][$key])}{$variables.values[$schemaid][$label][$item.single.assignmentid][$key]}{else}{$period.value}{/if}"
+																							<input id="{$elemid}" type="text" name="{$variable_prefix}[values][{$schemaid}][{$label}][{$item.single.assignmentid}][{$key}]" class="format-3f"
+																									value="{if isset($variables.values[$schemaid][$label][$item.single.assignmentid][$key])}{$variables.values[$schemaid][$label][$item.single.assignmentid][$key]}{else}{$period.value|string_format:"%.3f"}{/if}"
 																									{tip trigger=$elemid}>
-																							<i class="lms-ui-icon-restore" data-restore-selector="#{$elemid}" data-restore-value="{$period.value}"></i>
+																							<i class="lms-ui-icon-restore" data-restore-selector="#{$elemid}" data-restore-value="{$period.value|string_format:"%.3f"}"></i>
 																						{else}
 																							{if $period.value == ''}
 																								-
 																							{else}
-																								{moneyf($period.value, $item.single.currency)}
+																								{$period.value|string_format:"%01.3f"}
 																							{/if}
 																						{/if}
 																					</td>
@@ -350,7 +424,7 @@
 																				<option value="{$item.assignmentid}" data-tariffaccess="{$item.authtype}"
 																						data-tarifftype="{$item.type}" data-assignment-id="{$item.assignmentid}"
 																						{if in_array($item.assignmentid, (array)$variables.sassignmentid[$schemaid])} selected{/if}
-																					>{if $promotion_show_period_values}{t a=$item.tariff b=moneyf($item.value, $item.currency) c=implode(' / ', $item.periodvalues)}$a (default: $b; $c){/t}{else}{t a=$item.tariff b=moneyf($item.value, $item.currency)}$a (default: $b){/t}{/if}</option>
+																					>{if $promotion_show_period_values}{t a=$item.tariff b=moneyf($item.value, $item.currency, 3) c=implode(' / ', $item.periodvalues)}$a (default: $b; $c){/t}{else}{t a=$item.tariff b=moneyf($item.value, $item.currency, 3)}$a (default: $b){/t}{/if}</option>
 																				{/foreach}
 																			</select>
 																			<span class="schema-tariff-count">
@@ -438,7 +512,7 @@
 									{trans("Count:")}
 								</TD>
 								<TD>
-									<INPUT type="text" name="{$variable_prefix}[count]" value="{if $variables.count}{$variables.count}{else}1{/if}" size="15" pattern="[0-9]+([\.][0-9]+)?" formnovalidate {tip text="Enter count in numeric format" trigger="count"}>
+									<INPUT type="text" id="quantity" name="{$variable_prefix}[count]" value="{if $variables.count}{$variables.count}{else}1{/if}" size="15" pattern="[0-9]+([\.][0-9]+)?" formnovalidate {tip text="Enter count in numeric format" trigger="count"}>
 								</TD>
 							</TR>
 
@@ -541,7 +615,7 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="11" id="netprice" name="{$variable_prefix}[netvalue]" value=""
+												<input type="text" size="11" id="netprice" name="{$variable_prefix}[netvalue]" value="{if $variables.netvalue}{$variables.netvalue}{/if}"
 													   {tip text="Enter liability net price (tariffless liabilities only)" trigger="netvalue"}>
 											</td>
 											<td rowspan="2">
@@ -550,6 +624,7 @@
 														{tip text="Billing according to the net price"}>
 													<span class="lms-ui-label">{trans('calculated from net')}</span>
 												</label>
+												<span id="tariff-price-variants"></span>
 											</td>
 										</tr>
 										<tr>
@@ -559,7 +634,7 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="11" id="grossprice" name="{$variable_prefix}[value]" value=""
+												<input type="text" size="11" id="grossprice" name="{$variable_prefix}[value]" value="{if $variables.value}{$variables.value}{/if}"
 													{tip text="Enter liability gross price (tariffless liabilities only)" trigger="value"}>
 											</td>
 										</tr>
@@ -586,8 +661,8 @@
 									<span class="bold">{trans("Discount:")}</span>
 								</TD>
 								<TD style="{if !ConfigHelper::checkConfig('privileges.superuser') && ConfigHelper::checkConfig('privileges.hide_finances')} display: none;{/if}">
-									<INPUT type="text" size="8" name="{$variable_prefix}[discount]" value="{if $variables.pdiscount != 0}{$variables.pdiscount|string_format:"%.2f"}{else}{if $variables.vdiscount != 0}{$variables.vdiscount|string_format:"%.2f"}{/if}{/if}" {tip text="Enter discount percentage or amount" trigger="discount"}>
-									<SELECT name="{$variable_prefix}[discount_type]">
+									<INPUT type="text" size="8" id="discount_value" name="{$variable_prefix}[discount]" value="{if $variables.pdiscount != 0}{$variables.pdiscount|string_format:"%01.2f"}{else}{if $variables.vdiscount != 0}{$variables.vdiscount|string_format:"%01.3f"}{/if}{/if}" {tip text="Enter discount percentage or amount" trigger="discount"}>
+									<SELECT id="discount_type" name="{$variable_prefix}[discount_type]">
 										{foreach from=$_DISCOUNTTYPES item=item key=key}
 										<OPTION value="{$key}"{if $variables.discount_type == $key} selected{/if}>{$item}</OPTION>
 										{/foreach}
@@ -938,5 +1013,11 @@
 	</tr>
 	</TBODY>
 </TABLE>
+
+<template id="tariff_price_variants_template">
+	{capture assign="assignment_hint"}
+	{/capture}
+	{hint text=$assignment_hint icon="options"}
+</template>
 
 <script src="js/customerassignmenthelper.js"></script>
