--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -636,13 +636,13 @@
 					let selectedTaxId = $("#tax").find('option:selected').val();
 					let tax = $('#tax' + selectedTaxId).val();
 
-					let grossPrice = financeDecimals.round(grossPriceElemVal);
-					let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
+					let grossPrice = financeDecimals.round(grossPriceElemVal, 3);
+					let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1), 3);
 
-					netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
+					netPrice = netPrice.toFixed(3).replace(/[\.]+/, ',');
 					netPriceElem.val(netPrice);
 
-					grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
+					grossPrice = grossPrice.toFixed(3).replace(/[\.]+/, ',');
 					grossPriceElem.val(grossPrice);
 				} else {
 					netPriceElem.val('');
@@ -658,13 +658,13 @@
 					let selectedTaxId = $("#tax").find('option:selected').val();
 					let tax = $('#tax' + selectedTaxId).val();
 
-					let netPrice = financeDecimals.round(netPriceElemVal);
-					let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
+					let netPrice = financeDecimals.round(netPriceElemVal, 3);
+					let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1), 3);
 
-					grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
+					grossPrice = grossPrice.toFixed(3).replace(/[\.]+/, ',');
 					grossPriceElem.val(grossPrice);
 
-					netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
+					netPrice = netPrice.toFixed(3).replace(/[\.]+/, ',');
 					netPriceElem.val(netPrice);
 				} else {
 					grossPriceElem.val('');
