--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -527,6 +527,11 @@
     </form>
 
     <script>
+
+        const tariffNetFlagValue = '{$tariff.netflag}';
+        const tariffTaxValue = '{$tariff.taxvalue}';
+        const tariffpricevariantTariffId = '{$tariff.id}';
+
         function submitForm(callback) {
             $("#grossprice").prop('disabled', false);
             $("#netprice").prop('disabled', false);
@@ -582,13 +587,13 @@
                     let selectedTaxId = $("#tax").find('option:selected').val();
                     let tax = $('#tax' + selectedTaxId).val();
 
-                    let grossPrice = financeDecimals.round(grossPriceElemVal);
-                    let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
+                    let grossPrice = financeDecimals.round(grossPriceElemVal, 3);
+                    let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1), 3);
 
-                    netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
+                    netPrice = netPrice.toFixed(3).replace(/[\.]+/, ',');
                     netPriceElem.val(netPrice);
 
-                    grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
+                    grossPrice = grossPrice.toFixed(3).replace(/[\.]+/, ',');
                     grossPriceElem.val(grossPrice);
                 } else {
                     netPriceElem.val('');
@@ -604,13 +609,13 @@
                     let selectedTaxId = $("#tax").find('option:selected').val();
                     let tax = $('#tax' + selectedTaxId).val();
 
-                    let netPrice = financeDecimals.round(netPriceElemVal);
-                    let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
+                    let netPrice = financeDecimals.round(netPriceElemVal, 3);
+                    let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1), 3);
 
-                    grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
+                    grossPrice = grossPrice.toFixed(3).replace(/[\.]+/, ',');
                     grossPriceElem.val(grossPrice);
 
-                    netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
+                    netPrice = netPrice.toFixed(3).replace(/[\.]+/, ',');
                     netPriceElem.val(netPrice);
                 } else {
                     grossPriceElem.val('');
@@ -651,4 +656,9 @@
             });
         })
     </script>
+
+    {block name=tariffpricevariants}
+        {include file="tariff/tariffpricevariants.html"}
+    {/block}
+
 {/block}
