enhancement: uke/pit: added report stub

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1883,7 +1883,7 @@
 			</td>
 			<td class="nobr">
 				<label for="customernetdevices">
-					<strong>{trans("Include customer network device assignments:")}</strong>
+					<strong>{trans("Include customer network device assignments")}</strong>
 				</label>
 			</td>
 			<td>
@@ -1950,6 +1950,51 @@
 	});
 
 </script>
+
+{/if}
+
+{if $printmenu == "netdev"}
+<form method="post" name="uke-pit" id="uke-pit" action="?m=netdevprint&type=uke-pit">
+	<input type="submit" class="hiddenbtn">
+</form>
+
+<table class="lmsbox">
+	<colgroup>
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+		<col style="width: 99%;">
+	</colgroup>
+	<thead>
+	<tr>
+		<th scope="col" colspan="3" class="bold nobr">
+			{icon name="netdev" class="fa-fw"}
+			{trans("UKE PIT report")}
+		</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>
+			{icon name="netdevice" class="fa-fw"}
+		</td>
+		<td class="nobr">
+			<label for="uke-pit-customernetdevices">
+				<strong>{trans("Include customer network device assignments")}</strong>
+			</label>
+		</td>
+		<td>
+			<input type="checkbox" name="customernetdevices" form="uke-pit"
+				id="uke-pit-customernetdevices" value="1">
+		</td>
+	</tr>
+
+	<tr>
+		<td colspan="3" class="lms-ui-box-buttons">
+			{button form="uke-pit" icon="save" label="Submit" onclick="$('#uke-pit').submit();"}
+		</td>
+	</tr>
+	</tbody>
+</table>
 
 {/if}
 
