bugfix: fixed restore toggle state of overdue event panel

--- a/templates/default/event/eventlistbox_overdue.html
+++ b/templates/default/event/eventlistbox_overdue.html
@@ -44,9 +44,7 @@
 
 <script>
 
-    if (getCookie('overdue-events-panel') == 1) {
-        $('#overdue-events-panel').show();
-    }
+    $("#overdue-events-panel").toggle(getStorageItem("overdue-events-panel", "local") == "1");
 
 </script>
 {/block}
