bugfix: territ => teryt

--- a/templates/default/customer/customerdevices.html
+++ b/templates/default/customer/customerdevices.html
@@ -79,7 +79,7 @@
 									{if empty($customerdevice.location_city)}
 										{$customerdevice.location|truncate:60:"&hellip;":true}
 									{else}
-										{t a=$customerdevice.location|truncate:60:"&hellip;":true}$a (TERRIT){/t}
+										{t a=$customerdevice.location|truncate:60:"&hellip;":true}$a (TERYT){/t}
 									{/if}
 								{/if}
 							</span>
