--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -635,7 +635,7 @@
 				<OPTION value="77">{trans("with expired, active contracts")}</OPTION>
 				<OPTION value="61">{trans("with expiring contracts")}</OPTION>
 				<OPTION value="78">{trans("with expiring, active contracts")}</OPTION>
-				<OPTION VALUE="70">{trans("TERRIT not specified")}</OPTION>
+				<OPTION VALUE="70">{trans("TERYT not specified")}</OPTION>
 				<OPTION VALUE="68">{trans("without zip (main address)")}</OPTION>
 				<OPTION VALUE="74">{trans("without zip (other addresses)")}</OPTION>
 				<option value="81">{trans("without location address")}</option>
