--- a/templates/default/node/nodeinfobox.html
+++ b/templates/default/node/nodeinfobox.html
@@ -179,7 +179,7 @@
 												<div>
 												{if $nodeinfo.teryt}
 													{if $nodeinfo.location_name}{$nodeinfo.location_name} ,{/if}
-													{t a=$nodeinfo.location}$a (TERRIT){/t}
+													{t a=$nodeinfo.location}$a (TERYT){/t}
 												{else}
 													{if $nodeinfo.location_name}{$nodeinfo.location_name} ,{/if}{$nodeinfo.location}
 												{/if}
