--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -172,7 +172,7 @@
 				<optgroup label="{trans("Addresses")}">
 					<OPTION VALUE="67"{if $filter.state == 67} SELECTED{/if}>{trans("without building number")}</OPTION>
 					<OPTION VALUE="69"{if $filter.state == 69} SELECTED{/if}>{trans("without city")}</OPTION>
-					<OPTION VALUE="70"{if $filter.state == 70} SELECTED{/if}>{trans("TERRIT not specified")}</OPTION>
+					<OPTION VALUE="70"{if $filter.state == 70} SELECTED{/if}>{trans("TERYT not specified")}</OPTION>
 					<OPTION VALUE="68"{if $filter.state == 68} SELECTED{/if}>{trans("without zip (main address)")}</OPTION>
 					<OPTION VALUE="74"{if $filter.state == 74} SELECTED{/if}>{trans("without zip (other addresses)")}</OPTION>
 					<option value="81"{if $filter.state == 81} selected{/if}>{trans("without location address")}</option>
