bugfix: don't show empty vlan id in brackets

--- a/templates/default/net/netinfo.html
+++ b/templates/default/net/netinfo.html
@@ -114,7 +114,9 @@
 			</select>
 			{else}
 				{strip}
-					({$network.vlanid})
+					{if !empty($network.vlanid)}
+						({$network.vlanid})
+					{/if}
 					{if $network.vlandescription}
 						,&nbsp;{$network.vlandescription|trunescape:45}
 					{/if}
