--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -327,31 +327,31 @@
 					{trans("No.")}
 				</td>
 				<td>
-					{trans("Name of product, commodity or service:")}
+					{trans("Name of product, commodity or service")}
 				</td>
 				<td>
 					{trans("Type")}
 					<br>
-					{trans("Tax category:")}
+					{trans("Tax category")}
 				</td>
 				<td class="nobr">
-					{trans("Product ID:")}
+					{trans("Product ID")}
 				</td>
 				<td class="text-right">
-					{trans("Amount:")}<br>
-					{trans("Unit:")}
+					{trans("Amount")}<br>
+					{trans("Unit")}
 				</td>
 				<td class="text-right nobr">
-					{trans("Discount:")}
+					{trans("Discount")}
 				</td>
 				<td class="text-right nobr">
-					{trans("Net Price:")}
+					{trans("Net Price")}
 				</td>
 				<td class="text-right">
-					{trans("Tax:")}
+					{trans("Tax")}
 				</td>
 				<td class="text-right nobr">
-					{trans("Gross Price:")}
+					{trans("Gross Price")}
 				</td>
 				<td>
 					&nbsp;
