--- a/templates/default/receipt/receiptadd.html
+++ b/templates/default/receipt/receiptadd.html
@@ -399,10 +399,10 @@
 			<B>{trans("No.")}</B>
 		</TD>
 		<TD WIDTH="97%" NOWRAP>
-			{trans("Name of product, commodity or service:")}
+			{trans("Name of product, commodity or service")}
 		</TD>
 		<TD WIDTH="1%" NOWRAP ALIGN="RIGHT">
-			{trans("Value:")}
+			{trans("Value")}
 		</TD>
 		<TD WIDTH="1%" NOWRAP></TD>
 	</TR>
