--- a/templates/default/invoice/invoicecontents.html
+++ b/templates/default/invoice/invoicecontents.html
@@ -48,33 +48,33 @@
                     {trans("No.")}
                 </td>
                 <td>
-                    {trans("Name of product, commodity or service:")}
+                    {trans("Name of product, commodity or service")}
                 </td>
                 <td>
                     {trans("Type")}
                     <br>
-                    {trans("Tax category:")}
+                    {trans("Tax category")}
                 </td>
                 <td class="nobr">
-                    {trans("Product ID:")}
+                    {trans("Product ID")}
                 </td>
                 <td class="text-right">
-                    {trans("Amount:")}<br>
-                    {trans("Unit:")}
+                    {trans("Amount")}<br>
+                    {trans("Unit")}
                 </td>
                 <td class="text-right nobr">
-                    {trans("Discount:")}
+                    {trans("Discount")}
                 </td>
                 <td class="text-right nobr">
-                    {trans("Net Price:")}<br>
-                    {trans("Net Value:")}
+                    {trans("Net Price")}<br>
+                    {trans("Net Value")}
                 </td>
                 <td class="text-right">
-                    {trans("Tax:")}
+                    {trans("Tax")}
                 </td>
                 <td class="text-right nobr">
-                    {trans("Gross Price:")}<br>
-                    {trans("Gross Value:")}
+                    {trans("Gross Price")}<br>
+                    {trans("Gross Value")}
                 </td>
                 <td>
                     &nbsp;
