--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -34,6 +34,7 @@
 	var assignmentNetvalue = '{$document.assignment.netvalue}';
 	var assignmentNetflag = '{$document.assignment.netflag}';
 	var assignmentTaxid = '{$document.assignment.taxid}';
+	var assignmentTariffId = '{$document.assignment.triffid}';
 
 	var tariffTypes = [];
 	{foreach $tariffs as $tariff}
