bugfix: fix typo

--- a/templates/default/customer/customerassignmentsedit.html
+++ b/templates/default/customer/customerassignmentsedit.html
@@ -169,7 +169,7 @@
 	var assignmentNetvalue = '{$assignment.netvalue}';
 	var assignmentNetflag = '{$assignment.netflag}';
 	var assignmentTaxid = '{$assignment.taxid}';
-	var assignmentTariffId = '{$assignment.triffid}';
+	var assignmentTariffId = '{$assignment.tariffid}';
 
 	var tariffTypes = [];
 	{foreach $tariffs as $tariff}
