enhancement: added route/duct type and line count properties for network links

--- a/css/style.less
+++ b/css/style.less
@@ -2746,3 +2746,10 @@ fieldset {
 span.division-context {
 	margin-left: 0.5em;
 }
+
+.lms-ui-route-type {
+	 margin-block-start: 0;
+	 margin-block-end: 0;
+	 text-indent: -3.5em;
+	 margin-left: 3.5em;
+ }
