--- a/templates/default/netdev/netdevconnbox.html
+++ b/templates/default/netdev/netdevconnbox.html
@@ -117,7 +117,7 @@
 											{trans("Link type:")} {$_LINKTYPES[$netdevice.linktype]}
 											<br>
 											{if $netdevice.linktype == $smarty.const.LINKTYPE_FIBER}
-												{trans("Line count:")} {$netdevice.lines}
+												{trans("Line count:")} {$netdevice.linecount}
 												<br>
 											{/if}
 											{if $netdevice.linktype == $smarty.const.LINKETYPE_WIRELESS}
@@ -230,8 +230,8 @@
 						{/foreach}
 					</SELECT>
 
-					<input type="text" name="lines" form="connect-form" size="8" placeholder="{trans("Line count")}"
-						value="{if $devlinklines}{$devlinklines}{/if}"{if $devlinktype != $smarty.const.LINKTYPE_FIBER} disabled{/if}>
+					<input type="text" name="linecount" form="connect-form" size="8" placeholder="{trans("Line count")}"
+						value="{if $devlinklinecount}{$devlinklinecount}{/if}"{if $devlinktype != $smarty.const.LINKTYPE_FIBER} disabled{/if}>
 
 					<SELECT NAME="linktechnology" id="connboxlinktechnology" {tip trigger="connboxlinktechnology" text="Select link technology"}
 							onchange="change_devlinktechnology(this.options[this.selectedIndex].value)"
@@ -295,7 +295,7 @@
 		xjx.$('connboxsrcradiosector').style.display = (linktype == 1 ? '' : 'none');
 		xjx.$('connboxdstradiosector').style.display = (linktype == 1 ? '' : 'none');
 
-		$('[name="lines"]').prop('disabled', linktype != {$smarty.const.LINKTYPE_FIBER});
+		$('[name="linecount"]').prop('disabled', linktype != {$smarty.const.LINKTYPE_FIBER});
 
 		if (linktype == {$smarty.const.LINKTYPE_WIRELESS}) {
 			var selected = xjx.$('srcnetdev').selectedIndex;
